# Portfolio-optimization

./: .env.example  .gitignore  README.md  backtest_balanced_etf_regime_aware_2020-01-01_2025-01-01.json  portfolio.py  pyproject.toml  requirements.txt
config/: default.yaml  sample_universes.yaml
dashboard/: app.py
dashboard/components/: charts.py  sidebar.py
dashboard/pages/: page_01_universe.py  page_02_signals.py  page_03_optimize.py  page_04_backtest.py  page_05_memo.py
dashboard/views/: page_01_universe.py  page_02_signals.py  page_03_optimize.py  page_04_backtest.py  page_05_memo.py
docs/: DEMO_WALKTHROUGH.md  sample_backtest_output.txt  sample_memo.md
kuber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kuber/backtest/: __init__.py  benchmark.py  engine.py  metrics.py  report.py
kuber/data/: __init__.py  cache.py  macro_loader.py  price_loader.py  sentiment_loader.py  universe.py
kuber/explain/: __init__.py  attribution.py  memo_generator.py  scenario.py  templates.py
kuber/optimizer/: __init__.py  base.py  black_litterman.py  constraints.py  hierarchical.py  markowitz.py  (+2 more)
results/: all_experiments.json  black_litterman_allsignals.json  equal_weight_baseline.json  hrp_nosignals.json  markowitz_momentum.json  regime_aware_backtest.json  regime_aware_full.json  risk_parity_nosignals.json  sixty_forty_baseline.json  spy_buyhold_baseline.json
scripts/: generate_memo.py  run_all_experiments.py  run_backtest.py  smoke_test.py
tests/: test_backtest.py  test_data_loaders.py  test_metrics.py  test_optimizer.py  test_regime.py  test_signals.py
(+13 files in other folders)
