[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuber"
version = "0.1.0"
description = "KUBER — Knowledge-driven, Unified, Backtested, Explainable Research engine for portfolio optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "KUBER Team"},
]
keywords = ["portfolio", "optimization", "finance", "quantitative", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "yfinance>=0.2.31",
    "fredapi>=0.5.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "hmmlearn>=0.3",
    "arch>=6.0",
    "scipy>=1.11",
    "cvxpy>=1.4",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "streamlit>=1.28",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pytest>=7.4",
]

[project.optional-dependencies]
sentiment = [
    "transformers>=4.35",
    "torch>=2.1",
]
llm = [
    "anthropic>=0.25",
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["kuber*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
